###########################################################################
###
###  Copyright (c) 2005-2007, Tsujii Laboratory, The University of Tokyo.
###  All rights reserved.
###
###  Name: enju-devel/Makefile.am
###  Makefile for Enju
###
###########################################################################

# noinst_DATA = \
# 	fs.css \
# 	fs.xsl \
# 	moriv.css \
# 	*.conf \
# 	*.lil \
# 	*.prl \
# 	*.sh

# EXTRA_DIST = $(noinst_DATA)

