###########################################################################
###
###  Copyright (c) 2005-2007, Tsujii Laboratory, The University of Tokyo.
###  All rights reserved.
###
###  Name: enju/Makefile.am
###  Makefile for Enju
###
###########################################################################

enjulildir = $(datadir)/liblilfes/enju

enjulil_DATA = \
	brown-synmodel.lil \
	brown-grammar.lil \
        cgi.js \
        cgi.lil \
	display.lil \
	forestevent.lil \
	forestprob.lil \
	fullmask.lil \
	fullmodel.lil \
	genia-synmask.lil \
	genia-synmodel.lil \
	genia-grammar.lil \
	genia-forestevent.lil \
	genia-forestprob.lil \
	genia-lexmodel.lil \
	grammar.lil \
	iq-synmodel.lil \
	iq-grammar.lil \
	lexmodel.lil \
	macro.lil \
	moriv.lil \
	nbest.lil \
	outputdep.lil \
	outputxml.lil \
	partial.lil \
	pashighlight.js \
	reduction.lil \
	schema.lil \
	semmask.lil \
	semmodel.lil \
	stem.lil \
	synmask.lil \
	synmodel.lil \
	tools.lil \
	types.lil \
	xmltypes.lil \
	enju-super.conf

EXTRA_DIST = $(enjulil_DATA)

